# hidblinker

./: .clang-format  CMakeLists.txt
example/: main.c
src/: hidblinker.c  hidblinker.h
